--- a/marketing-ui/package.json
+++ b/marketing-ui/package.json
@@ -15,9 +15,12 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.1",
     "@mui/lab": "^6.0.0-beta.24",
-    "@mui/material": "^6.4.0",
+    "@mui/material": "^6.4.3",
+    "@mui/x-charts": "^7.26.0",
+    "@mui/x-date-pickers": "^7.26.0",
     "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
@@ -38,6 +41,7 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "jsdom": "^26.0.0",
+    "sass-embedded": "^1.83.4",
     "vite": "^6.0.11",
     "vitest": "^3.0.5"
   }
